tests/ui/typeck/issue-114918/const-in-impl-fn-return-type.next.stderr
error[E0308]: mismatched types
  --> $DIR/const-in-impl-fn-return-type.rs:20:39
   |
LL |     fn func<const N: u32>() -> [(); { () }] {
   |                                       ^^ expected `usize`, found `()`

error[E0271]: type mismatch resolving `N == { () }`
  --> $DIR/const-in-impl-fn-return-type.rs:20:5
   |
LL |     fn func<const N: u32>() -> [(); { () }] {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ types differ
   |
note: the requirement `N == { () }` appears on the `impl`'s method `func` but not on the corresponding trait's method
  --> $DIR/const-in-impl-fn-return-type.rs:12:8
   |
LL | trait Trait {
   |       ----- in this trait
LL |     fn func<const N: u32>() -> [(); N];
   |        ^^^^ this trait's method doesn't have the requirement `N == { () }`

error: the constant `N` is not of type `usize`
  --> $DIR/const-in-impl-fn-return-type.rs:12:32
   |
LL |     fn func<const N: u32>() -> [(); N];
   |                                ^^^^^^^ expected `usize`, found `u32`
   |
   = note: the length of array `[(); N]` must be type `usize`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0271, E0308.
For more information about an error, try `rustc --explain E0271`.
